<resources>
    <string name="app_name">Unipi Audio Stories</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="logout">Logout</string>
    <string name="voice_command_error">Speech recognition not supported</string>"
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="verify_email_notice">Please verify your email address, following the link sent in your email</string>
    <string name="email_sent_failure">Failed to send you a verification email</string>
    <string name="enter_email_address">Please enter your email address</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="reset_password_email_sent"> Reset password email sent to your email address</string>
    <string name="records">Statistics</string>
    <string name="favorites">Favorites</string>
    <string name="play_story">Play</string>
    <string name="pause_story">Pause</string>
    <string name="add_fav">Added to Favorites List</string>
    <string name="remove_fav">Removed from Favorites List</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="account_deleted">Account Deleted successfully!</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="try_again">Try Again</string>
    <string name="choose_language">Choose Language</string>
    <string name="language_english">English</string>
    <string name="language_greek">Greek</string>
    <string name="already_in">Already in Favorites List</string>
    <string name="global_suggestion_text">Click here to listen to this story"</string>
    <string name="unknown_voice_command">Please tell me which screen would you like me to open?</string>
    <string name="language_french">French</string>
    <string name="close_app">Close app</string>
    <string name="speak_now">Speak now..."</string>
    <string name="trending_now">Most users listen to:</string>
    <string name="lesson_title">Moral of the story:</string>
    <string name="no_favs_yet">Your favorites list is empty</string>
    <string name="most_times_completed">Seems to prefer listening to:</string>
    <string name="most_times_heard">Most times heard story:</string>
    <string name="fill_all_fields_message">Please fill all the fields</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_failed">Registration Failed </string>
    <string name="no_stats_yet">No statistics yet</string>
    <string name="suggestion_text">You may add this story to your favourites list</string>
    <string name="times_played">Times played </string>
    <string name="username_required">Username is required</string>
</resources>