<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#1E1E1E"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textColor="#BB86FC"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/btnEn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/language_english"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textSize="15sp"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#333333"/>

        <TextView
            android:id="@+id/btnEl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/language_greek"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textSize="15sp" />

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#333333"/>

        <TextView
            android:id="@+id/btnFr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/language_french"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>